--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "dependencies": {
     "@ionic/core": "4.0.0-beta.12",
     "@stencil/core": "0.13.2"
+  },
+  "devDependencies": {
+    "workbox-build": "3.4.1"
   }
 }
